fixed the login screen interface on firefox

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -2324,7 +2324,6 @@ html body #main.sessions
         background-position: 0
         color: transparentize(#12b2e6, 1 - 0.25)
       &:-moz-placeholder
-        background-position: 0
         color: transparentize(#12b2e6, 1 - 0.25)
       &.hover, &:hover
         background-position: 0 -1*53px
